@@ -1,3 +1,15 @@
+2011-04-02  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: fix timestamp-related failures
+	Fixes automake bug#8365.
+	* tests/aclocal6.test: Sleep before modifying m4 files that should
+	trigger remake rules.  Remove incorrect/obsoleted comments.
+	* tests/subdir5.test: Likewise, and extend a bit.
+	* tests/subdir8.test: Likewise.
+	* tests/pr8365-remake-timing.test: New xfailing test.
+	* tests/Makefile.am (TESTS): Update.
+	Report from Sam Steingold.
+
 2011-04-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Create subdirs for generated sources even when not dep tracking.
